<resources>
    <string name="app_name">APSFL</string>
    <string name="government_of_ap">Government of Andhra Pradesh</string>
    <string name="state_fiber_limited">State FiberNet Limited</string>
    <string name="login_username_hint">Enter Username</string>
    <string name="login_password_hint">Enter Password</string>
    <string name="login_button_hint">Sign In</string>
    <string name="remember_me_hint">Remember me</string>
    <string name="login_copyrights">Copyright &#169; 2016. Core Services, All rights reserved</string>
    <string name="activity_main_title">APSFL Mobile</string>
    <string name="activity_caf_title">New CAF Form</string>
    <string name="activity_search_caf_title">Search Existing CAF</string>
    <string name="activity_caf_results_title">CAF Search Results</string>
    <string name="activity_select_services_title">Select Services</string>
    <string name="activity_select_enterprise_customer_title">Select Customer</string>
    <string name="activity_selected_product_services_title">Selected Packages</string>
    <string name="activity_select_mandal_title">Select Mandal</string>
    <string name="activity_select_village_title">Select Village</string>
    <string name="activity_select_pop_title">Select POP</string>
    <string name="activity_offline_forms_title">Pending Forms</string>
    <string name="activity_payments_title">Monthly Payments</string>
    <string name="activity_payment_entry_title">Payment Entry</string>
    <string name="activity_feasibility_check_title">Work Order and Payment</string>
    <string name="activity_selected_cpe_title">CPE Charge Details</string>
    <string name="activity_otp_title">Enter OTP</string>
    <string name="fragment_customer_info_title">Customer Information</string>
    <string name="fragment_cpe_info_title">CPE Information</string>
    <string name="fragment_address_info_title">Installation Address</string>
    <string name="fragment_base_package_title">Base Packages</string>
    <string name="fragment_add_on_package_title">Add On Packages</string>
    <string name="fragment_one_time_package_title">One-Time Packages</string>
    <string name="fragment_telephone_service_title">Telephone Feature</string>
    <string name="Error">Error</string>
    <string name="slotalready_assigned_message">Slot is already assigned. Please try another one.</string>
    <string name="submit_new_individual_form">Individual CAF</string>
    <string name="submit_new_enterprise_form">Enterprise CAF</string>
    <string name="search_existing_caf_text">Search CAF</string>
    <string name="make_payments_text">Monthly Payments</string>
    <string name="make_bulk__payments_text">Bulk Monthly Payments</string>
    <string name="pending_forms_text">Pending CAF Forms</string>
    <string name="main_menu_text">Logout</string>
    <string name="no_forms_message">No forms to display</string>
    <string name="form_submission_date_text">Submitted On</string>
    <string name="form_submission_status_text">Status</string>
    <string name="form_select_package_text">Select Packages</string>
    <string name="form_submit_text">Submit CAF</string>
    <string name="form_edit_text">Edit CAF</string>
    <string name="caf_form_menu_text">Submit</string>
    <string name="product_menu_text">Next</string>
    <string name="search_caf_menu_text">Search</string>
    <string name="menu_done">Done</string>
    <string name="menu_add">Add</string>
    <string name="feasibility_menu_submit">Submit</string>
    <string name="CAF_number_text">Generating CAF Number</string>
    <string name="lmo_name_text">Name</string>
    <string name="lmo_wallet_text">Wallet</string>
    <string name="lmo_credit_text">Credit Limit</string>
    <string name="lmo_remaining_text">Remaining Limit</string>
    <string name="aadhaar_number_text">Aadhaar No/Register No*</string>
    <string name="aadhaar_number_hint">Enter Aadhaar Number</string>
    <string name="aadhaar_number_button_text">Retrieve</string>
    <string name="services_label_text">Select Service*</string>
    <string name="product_label_text">Select Product*</string>
    <string name="cable_service_text">VAS</string>
    <string name="internet_service_text">IS</string>
    <string name="vod_service_text">IPTV</string>
    <string name="voip_service_text">VOIP</string>
    <string-array name="service_spinner_items">
        <item>@string/cable_service_text</item>
        <item>@string/internet_service_text</item>
        <item>@string/vod_service_text</item>
        <item>@string/voip_service_text</item>
    </string-array>
    <string-array name="product_spinner_items">
        <item>Select Product</item>
        <item>Product 1</item>
        <item>Product 2</item>
        <item>Product 3</item>
        <item>Product 4</item>
    </string-array>
    <string name="bill_cycle_text">Bill Cycle*</string>
    <string-array name="bill_cycle_spinner_items">
        <item>--Select--</item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
    </string-array>
    <string name="bill_frequency_text">Bill Frequency*</string>
    <string name="segment_text">Segment</string>
    <string name="channel_text">Channel</string>
    <string name="pop_name_text">POP Name*</string>
    <string name="olt_id_text">OLT ID*</string>
    <string name="olt_port_id_text">OLT Port-ID*</string>
    <string name="olt_port_level1_text">Level-1 Slot*</string>
    <string name="olt_port_level2_text">Level-2 Slot*</string>
    <string name="olt_port_level3_text">Level-3 Slot*</string>
    <string name="pop_districts_text">Installation District*</string>
    <string name="pop_mandals_text">Installation Mandal*</string>
    <string name="cpe_serial_number_text">ONU Serial Number*</string>
    <string name="device_id_text_hint">Enter ONU Serial Number</string>
    <string name="cpe_onu_mac_address_text">ONU Mac-Id*</string>
    <string name="cpe_stb_mac_address_hint">Enter ONU Mac-Id</string>
    <string name="cpe_model_text">ONU Model*</string>
    <string name="cpe_stb_model_optional_text">IPTV Box Model</string>
    <string name="cpe_stb_model_mandatory_text">IPTV Box Model*</string>
    <string name="cpe_lease_text">ONU Own*</string>
    <string name="cpe_stb_lease_text">IPTV Box Own*</string>
    <string name="cpe_lease_yes">YES</string>
    <string name="cpe_lease_no">NO</string>
    <string name="cpe_if_lease_text">No Of ONU EMI*</string>
    <string name="cpe_price_rental_text">ONU Upfront Price*</string>
    <string name="cpe_installments_text">ONU EMI Price*</string>
    <string name="iptv_installments_text">IPTV Box EMI Price*</string>
    <string name="cpe_installments_hint">IPTV Box EMI Price</string>
    <string name="iptv_installments_hint">IPTV Box Price/Installment</string>
    <string name="cpe_price_rental_hint">ONU Price/Installment</string>
    <string name="cpe_stb_if_lease_text">No Of IPTV Box EMI*</string>
    <string name="cpe_stb_price_rental_text">IPTV Box Upfront Price*</string>
    <string name="cpe_stb_price_rental_hint">IPTV Box Upfront Price*</string>
    <string name="iptv_serial_number_text">IPTV Box Serial Number*</string>
    <string name="iptv_serial_number_hint">Enter IPTV Box Serial Number</string>
    <string name="iptv_box_mac_id_text">IPTV Box Mac-Id*</string>
    <string name="iptv_box_mac_id_hint">Enter IPTV Box Mac-Id</string>
    <string name="cpe_installation_text">Installation Charge*</string>
    <string name="cpe_installation_hint">Enter Installation Charge</string>
    <string name="cpe_extra_cable_charge_text">Extra Cable Charge*</string>
    <string name="cpe_extra_cable_charge_hint">Enter extra cable charge</string>
    <string name="longitude_text">Longitude</string>
    <string name="longitude_hint">Enter longitude</string>
    <string name="latitude_text">Latitude</string>
    <string name="latitude_hint">Enter latitude</string>
    <string name="location_text">CPE Device Location*</string>
    <string name="location_hint">Enter location</string>
    <string-array name="onu_device_spinner_items">
        <item>--Select--</item>
        <item>Purchase</item>
        <item>Installment</item>
    </string-array>
    <string-array name="stb_device_spinner_items">
        <item>--Select--</item>
        <item>Purchase</item>
        <item>Installment</item>
    </string-array>
    <string-array name="olt_port_id_spinner_items">
        <item>--Select--</item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
    </string-array>
    <string-array name="tele_conn_count_spinner_items">
        <item>--Select--</item>
        <item>1</item>
        <item>2</item>
    </string-array>
    <string name="customer_type_text">Select customer type*</string>
    <string name="pan_id_text">PAN Number</string>
    <string name="pan_id_hint">Enter PAN Number</string>
    <string name="tan_number_text">TAN Number</string>
    <string name="tan_number_hint">Enter TAN Number</string>
    <string name="name_title_text">Title*</string>
    <string name="name_title_mr">Mr.</string>
    <string name="name_title_mrs">Mrs.</string>
    <string name="name_title_ms">Ms.</string>
    <string name="first_name_text">First Name/Organization Name*</string>
    <string name="first_name_hint">Enter first name</string>
    <string name="middle_name_text">Middle Name</string>
    <string name="middle_name_hint">Enter middle name</string>
    <string name="last_name_text">Surname*</string>
    <string name="last_name_hint">Enter last name</string>
    <string name="dob_text">Date of Birth/Incorporation*</string>
    <string name="dob_text_hint">Select date</string>
    <string name="gender_text">Gender*</string>
    <string name="gender_male_text">M</string>
    <string name="gender_female_text">F</string>
    <string name="father_husband_text">Father\'s/Husband\'s Name</string>
    <string name="father_husband_hint">Enter father\'s or husband\'s name</string>
    <string name="installation_address_text">Installation Address</string>
    <string name="address1_text">Building/House/Flat*</string>
    <string name="address2_text">Street</string>
    <string name="address_hint">Enter Address</string>
    <string name="street_address_hint">Enter street address/villageName</string>
    <string name="locality_address_text">Locality/Area*</string>
    <string name="locality_address_hint">Enter locality</string>
    <string name="area_address_text">District*</string>
    <string name="area_address_hint">Enter district</string>
    <string name="city_district_text">Installation City/Village*</string>
    <string name="city_district_hint">Enter villageName/villageName</string>
    <string name="state_ut_text">State*</string>
    <string name="state_ut_hint">Enter state</string>
    <string name="pin_code_text">Pin Code*</string>
    <string name="pin_code_hint">Enter pin code</string>
    <string name="mobile_number_text">Mobile Number*</string>
    <string name="mobile1_number_text">Alternate Mobile Number</string>
    <string name="mobile_number_hint">Enter mobile number</string>
    <string name="land_line_number_text">Land Line Number</string>
    <string name="std_code_hint">Enter STD code</string>
    <string name="land_line_number_hint">Enter land line number</string>
    <string name="customer_declaration">Customer Declaration</string>
    <string name="lmo_declaration">LMO Declaration</string>
    <string name="payment_aadhaar_heading">Aadhaar Number/Registration Number</string>
    <string name="payment_customer_name_heading">Customer Name/Organization Name</string>
    <string name="payment_payable_amount_heading">Total Payable Amount</string>
    <string name="payment_mode_heading">Payment Mode*</string>
    <string name="payment_amount_heading">Amount*</string>
    <string name="payment_amount_hint">Amount to be paid</string>
</resources>