<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <include
        android:id="@+id/previousNextLayout"
        layout="@layout/layout_previous_next"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_margin="5dp" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/previousNextLayout"
        android:fillViewport="true"
        android:visibility="visible">

        <LinearLayout
            android:id="@+id/mainLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:orientation="vertical">

            <TextView
                style="@style/customTextViewStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:text="@string/installation_address_text" />

            <TextView
                style="@style/customTextViewStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/address1_text" />

            <EditText
                android:id="@+id/formAddress1EditText"
                style="@style/customEditTextStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/address_hint"
                android:imeOptions="actionNext"
                android:inputType="text|textVisiblePassword" />

            <TextView
                style="@style/customTextViewStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/address2_text" />

            <EditText
                android:id="@+id/formAddress2EditText"
                style="@style/customEditTextStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/address_hint"
                android:imeOptions="actionNext"
                android:inputType="text|textVisiblePassword" />

            <TextView
                style="@style/customTextViewStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/locality_address_text" />

            <EditText
                android:id="@+id/formLocalityEditText"
                style="@style/customEditTextStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/locality_address_hint"
                android:imeOptions="actionNext"
                android:inputType="text|textVisiblePassword" />

            <TextView
                style="@style/customTextViewStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/location_text" />

            <EditText
                android:id="@+id/formLocationEditText"
                style="@style/customEditTextStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:enabled="true"
                android:hint="@string/location_hint"
                android:inputType="text|textVisiblePassword" />

            <LinearLayout
                android:id="@+id/siLmoPOPAddress"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:visibility="visible"
                >

                <TextView
                    style="@style/customTextViewStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="POP District *" />

                <Spinner
                    android:id="@+id/selectedSILMOPOPDistrictName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:layout_marginRight="5dp"
                    android:layout_marginTop="2dp"
                    android:gravity="center|start"
                    android:paddingBottom="5dp"
                    android:textColor="@color/black" />

                <TextView
                    style="@style/customTextViewStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="POP Mandal *" />

                <TextView
                    android:id="@+id/selectedSILMOPOPMandalName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:layout_marginRight="5dp"
                    android:layout_marginTop="2dp"
                    android:gravity="center|start"
                    android:paddingBottom="5dp"
                    android:textColor="@color/black" />
            </LinearLayout>

            <TextView
                style="@style/customTextViewStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/pop_name_text" />

            <TextView
                android:id="@+id/selectedPOPName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:layout_marginTop="2dp"
                android:gravity="center|start"
                android:paddingBottom="5dp"
                android:textColor="@color/black" />

            <LinearLayout
                android:id="@+id/siLmoAddress"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:visibility="visible">
             <!--   <CheckBox
                    android:id="@+id/isPopInstSame"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:text="Is Pop and Installation address are same"
                    android:textSize="14sp" />-->
                <TextView
                    style="@style/customTextViewStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/pop_districts_text" />

                <Spinner
                    android:id="@+id/selectedSILMODistrictName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:layout_marginRight="5dp"
                    android:layout_marginTop="2dp"
                    android:gravity="center|start"
                    android:paddingBottom="5dp"
                    android:textColor="@color/black" />

                <TextView
                    style="@style/customTextViewStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/pop_mandals_text" />

                <TextView
                    android:id="@+id/selectedSILMOMandalName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:layout_marginRight="5dp"
                    android:layout_marginTop="2dp"
                    android:gravity="center|start"
                    android:paddingBottom="5dp"
                    android:textColor="@color/black" />

                <TextView
                    style="@style/customTextViewStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/city_district_text" />

                <TextView
                    android:id="@+id/formSelectedSILMOVillage"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:layout_marginRight="5dp"
                    android:layout_marginTop="2dp"
                    android:gravity="center|start"
                    android:paddingBottom="5dp"
                    android:textColor="@color/black" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/lmoAddress"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:visibility="gone">

                <TextView
                    style="@style/customTextViewStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/city_district_text" />

                <TextView
                    android:id="@+id/formSelectedVillage"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:layout_marginRight="5dp"
                    android:layout_marginTop="2dp"
                    android:gravity="center|start"
                    android:paddingBottom="5dp"
                    android:textColor="@color/black" />

                <TextView
                    style="@style/customTextViewStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/pop_mandals_text" />

                <TextView
                    android:id="@+id/selectedMandalName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:layout_marginRight="5dp"
                    android:layout_marginTop="2dp"
                    android:gravity="center|start"
                    android:paddingBottom="5dp"
                    android:textColor="@color/black" />

                <TextView
                    style="@style/customTextViewStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/pop_districts_text" />

                <TextView
                    android:id="@+id/selectedDistrictName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:layout_marginRight="5dp"
                    android:layout_marginTop="2dp"
                    android:gravity="center|start"
                    android:paddingBottom="5dp"
                    android:textColor="@color/black" />
            </LinearLayout>

            <TextView
                android:id="@+id/pincodeTitle"
                style="@style/customTextViewStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/pin_code_text" />

            <EditText
                android:id="@+id/formPinCodeEditText"
                style="@style/customEditTextStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:digits="0123456789"
                android:hint="@string/pin_code_hint"
                android:imeOptions="actionNext"
                android:inputType="number"
                android:maxLength="6" />

            <TextView
                style="@style/customTextViewStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/mobile_number_text" />

            <EditText
                android:id="@+id/formMobileEditText"
                style="@style/customEditTextStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:digits="0123456789"
                android:hint="@string/mobile_number_hint"
                android:imeOptions="actionNext"
                android:inputType="phone"
                android:maxLength="10" />


            <TextView
                style="@style/customTextViewStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/mobile1_number_text" />

            <EditText
                android:id="@+id/formMobile1EditText"
                style="@style/customEditTextStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:digits="0123456789"
                android:hint="@string/mobile_number_hint"
                android:imeOptions="actionNext"
                android:inputType="phone"
                android:maxLength="10" />

            <TextView
                style="@style/customTextViewStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/land_line_number_text" />

            <LinearLayout
                android:id="@+id/formLandLineLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:orientation="horizontal"
                android:weightSum="1">

                <EditText
                    android:id="@+id/formSTDCodeEditText"
                    style="@style/customEditTextStyle"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.4"
                    android:digits="+0123456789"
                    android:hint="@string/std_code_hint"
                    android:imeOptions="actionNext"
                    android:inputType="number"
                    android:maxLength="5" />

                <EditText
                    android:id="@+id/formLandLineEditText"
                    style="@style/customEditTextStyle"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.6"
                    android:digits="0123456789"
                    android:hint="@string/land_line_number_hint"
                    android:imeOptions="actionDone"
                    android:inputType="number"
                    android:maxLength="10" />
            </LinearLayout>
<LinearLayout
   android:id="@+id/layout_langitude"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">
            <TextView
                style="@style/customTextViewStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/longitude_text" />

            <EditText
                android:id="@+id/formLongitudeEditText"
                style="@style/customEditTextStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:enabled="false"
                android:hint="@string/longitude_hint"
                android:inputType="number|textVisiblePassword" />

            <TextView
                style="@style/customTextViewStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/latitude_text" />

            <EditText
                android:id="@+id/formLatitudeEditText"
                style="@style/customEditTextStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:enabled="false"
                android:hint="@string/latitude_hint"
                android:inputType="number|textVisiblePassword" />
</LinearLayout>

            <CheckBox
                android:id="@+id/formCustomerDeclaration"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="@string/customer_declaration"
                android:textSize="14sp" />

            <CheckBox
                android:id="@+id/formLMODeclaration"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="@string/lmo_declaration"
                android:textSize="14sp" />

        </LinearLayout>
    </ScrollView>

</RelativeLayout>